argo-events/gateway-replay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: replay-gateway
  namespace: replay
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
